--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
     <div class="container">
         <div class="header">
-            <h1>NUBTK CSE Payment Portal</h1>
+            <h1>NUBTK CSE Payment Searching Portal</h1>
             <p class="terminal-prompt">Department of Computer Science & Engineering <span class="terminal-cursor"></span></p>
         </div>
 
