--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSE Payment Portal - NUBTK</title>
+    <meta name="author" content="Sakil Hasan Saikat" />
+     <meta name="og:title" property="og:title" content="NUBTK CSE Payment Searching Portal" />
+    <meta name="og:description" property="og:description" content=">Department of Computer Science & Engineering" />
+    <meta name="og:image" property="og:image" content="social.png" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
     <style>
         * {
