--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSE Payment Portal - NUBTK</title>
-    <meta name="author" content="Sakil Hasan Saikat" />
-     <meta name="og:title" property="og:title" content="NUBTK CSE Payment Searching Portal" />
-    <meta name="og:description" property="og:description" content=">Department of Computer Science & Engineering" />
+    <meta name="author" content="HackBit" />
+    <meta name="keywords" content="hackbit.org, hacker, Bangladeshi ethical hacker group, Bangladesh top hacker, hackbitorg, hackerone, Bangladesh hackerone, hacker community Banglaseh, Sakil Hasan Saikat, 0xSaikat " />
+    <meta name="description" content="Department of Computer Science & Engineering" />
+    <meta name="og:title" property="og:title" content="NUBTK CSE Payment Searching Portal" />
+    <meta name="og:description" property="og:description" content="Department of Computer Science & Engineering" />
     <meta name="og:image" property="og:image" content="social.png" />
+    <meta name="twitter:title" content="NUBTK CSE Payment Searching Portal" />
+    <meta name="twitter:description" content="Department of Computer Science & Engineering" />
+    <meta name="twitter:image" content="social.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
+    
     <style>
         * {
             margin: 0;
