--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ body:hover:before {
         paymentData = await response.json();
         
         updateSummaryStats();
-        document.getElementById('fileStatus').innerHTML = 'Data loaded successfully';
+        document.getElementById('fileStatus').innerHTML = 'Semester fee deadline: 13/02/2025';
         document.getElementById('fileStatus').className = 'file-status success';
         
         return true;
