--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="auth-container" id="authContainer">
         <div class="auth-box">
             <div class="auth-header">
-                <h2 class="terminal-prompt">NUBTK CSE Payment Portal</h2>
+                <h2 class="terminal-prompt">NUBTK Payments</h2>
                 <div class="auth-tabs">
                     <button class="auth-tab active" id="loginTab">Login</button>
                     <button class="auth-tab" id="signupTab">Sign Up</button>
