--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
 
         <div class="header">
-            <h1>NUBTK CSE Payment Searching Portal</h1>
+            <h1>NUBTK Payments</h1>
             <p class="terminal-prompt">Department of Computer Science & Engineering <span class="terminal-cursor"></span></p>
         </div>
 
