--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="container" id="mainContainer" style="display: none;">
         <div class="user-nav">
             <div class="user-profile">
-                <img id="userProfilePic" src="default-profile.png" alt="Profile" class="profile-pic">
+                <img id="userProfilePic" src="df.png" alt="Profile" class="profile-pic">
                 <span id="userDisplayName" class="user-name">Student</span>
             </div>
             <div class="nav-actions">
@@ -149,7 +149,7 @@
             
             <div class="profile-header">
                 <div class="profile-image-container">
-                    <img id="modalProfilePic" src="default-profile.png" alt="Profile" class="modal-profile-pic">
+                    <img id="modalProfilePic" src="df.png" alt="Profile" class="modal-profile-pic">
                     <label for="updateProfilePic" class="upload-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
