--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             
             <div class="student-banner-ad">
                 <a href="#" class="student-banner-link">
-                    <img src="student-ads.png" alt="Semester Registration Banner" class="student-banner-image">
+                    <img src="student-ads.gif" alt="Semester Registration Banner" class="student-banner-image">
                 </a>
             </div>
 
