--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
 
         <div class="sponsor-section">
-            <h3 class="terminal-prompt">Sponsored by</h3>
+            <h3 class="terminal-prompt">Developed by</h3>
             <br>
             
             <img src="hackbit.png" alt="HackBit Logo" style="max-width: 200px; height: auto;">
