--- a/index.html
+++ b/index.html
@@ -218,6 +218,11 @@
                   <button id="saveNoteBtn" class="note-btn">Save Note</button>
                 </div>
             </div>
+            <div class="student-banner-ad">
+                <a href="#" class="student-banner-link">
+                    <img src="student-ads.gif" alt="Semester Registration Banner" class="student-banner-image">
+                </a>
+            </div>
             <div class="profile-payment-chart">
                 <canvas id="totalReceivedChart"></canvas>
             </div>
