--- a/index.html
+++ b/index.html
@@ -138,6 +138,19 @@
             <p>Waving the Internet Securely!</p>
             <br>
             <p><a href="https://www.hackbit.org" target="_blank" style="color: #00ff9d; text-decoration: none;">www.hackbit.org</a></p>
+             <br>
+            <p>
+                <a href="https://saikat.hackbit.org/" 
+                   target="_blank" 
+                   style="color: red; font-weight: bold; font-family: monospace; text-decoration: none;">
+                   [@0xSaikat]
+                </a>
+                <a href="#" 
+                   target="_blank" 
+                   style="color: red; font-weight: bold; font-family: monospace; text-decoration: none;">
+                   [Feedback]
+                </a>
+            </p>
         </div>
     </div>
 
