--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
            
             <form id="signupForm" class="auth-form" style="display: none;">
                 <div class="form-group">
-                    <label for="signupStudentId">Student ID (11 digits)</label>
+                    <label for="signupStudentId">Student ID (11 digits)*</label>
                     <input type="text" id="signupStudentId" class="auth-input" pattern="[0-9]{11}" required>
                 </div>
                 <div class="form-group">
-                    <label for="signupEmail">Email</label>
+                    <label for="signupEmail">Email*</label>
                     <input type="email" id="signupEmail" class="auth-input" required>
                 </div>
                 <div class="form-group">
-                    <label for="signupPassword">Password</label>
+                    <label for="signupPassword">Password*</label>
                     <input type="password" id="signupPassword" class="auth-input" required>
                 </div>
                 <div class="form-group">
