--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
             <div class="student-banner-ad">
                 <div class="student-banner-content">
                     <h4 class="student-banner-heading">Special Announcement</h4>
-                    <p class="student-banner-text">Coming Soon!</p>
-                    <a href="#" class="student-banner-button">Learn More</a>
+                    <p class="student-banner-text">Primary Course offering of CSE/ECSE Spring 2025 Semester.</p>
+                    <a href="https://www.facebook.com/share/p/1Bf7HSnZE9/?" class="student-banner-button">Learn More</a>
                 </div>
             </div>
             <div class="payment-notes-section">
