--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <p><a href="https://www.hackbit.org" target="_blank" style="color: #00ff9d; text-decoration: none;">www.hackbit.org</a></p>
              <br>
             <p>
-                <a href="https://saikat.hackbit.org/" 
+                <a href="https://www.linkedin.com/in/0xsaikat" 
                    target="_blank" 
                    style="color: red; font-weight: bold; font-family: monospace; text-decoration: none;">
                    [@0xSaikat]
