--- a/index.html
+++ b/index.html
@@ -102,7 +102,19 @@
         </div>
 
         <div class="ads-container">
-            <a href="https://hackbit.com" target="_blank" rel="noopener noreferrer" class="banner-link">
+            <div id="mainBannerAd">
+                <script type="text/javascript">
+                    atOptions = {
+                        'key': '07574fd794fc323fba48d3bcbe056cba',
+                        'format': 'iframe',
+                        'height': 90,
+                        'width': 728,
+                        'params': {}
+                    };
+                </script>
+                <script type="text/javascript" src="//www.highperformanceformat.com/07574fd794fc323fba48d3bcbe056cba/invoke.js"></script>
+            </div>
+            <a href="https://hackbit.com" target="_blank" rel="noopener noreferrer" class="banner-link" id="fallbackBanner">
                 <img src="ads.png" alt="Advertisement Banner" class="banner-img">
             </a>
         </div>
@@ -172,7 +184,19 @@
             </div>
             
             <div class="student-banner-ad">
-                <a href="#" class="student-banner-link">
+                <div id="profileBannerAd1">
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': '07574fd794fc323fba48d3bcbe056cba',
+                            'format': 'iframe',
+                            'height': 90,
+                            'width': 728,
+                            'params': {}
+                        };
+                    </script>
+                    <script type="text/javascript" src="//www.highperformanceformat.com/07574fd794fc323fba48d3bcbe056cba/invoke.js"></script>
+                </div>
+                <a href="#" class="student-banner-link" id="fallbackProfileBanner1">
                     <img src="student-ads.gif" alt="Semester Registration Banner" class="student-banner-image">
                 </a>
             </div>
@@ -244,6 +268,8 @@
         </div>
     </div>
 
+<script type='text/javascript' src='//pl26186739.effectiveratecpm.com/ef/9c/a1/ef9ca14418ce9eae91d346612600f2b6.js'></script>
+</body>
   
     <script src="app.js"></script>
 </body>
