--- a/index.html
+++ b/index.html
@@ -103,10 +103,18 @@
 
         <div class="ads-container">
             <div id="mainBannerAd">
-                <script async="async" data-cfasync="false" src="//pl26186858.effectiveratecpm.com/fdcbe2003e9af56934944b040ab60f21/invoke.js"></script>
-                <div id="container-fdcbe2003e9af56934944b040ab60f21"></div>
+                <script type="text/javascript">
+                    atOptions = {
+                        'key': '07574fd794fc323fba48d3bcbe056cba',
+                        'format': 'iframe',
+                        'height': 90,
+                        'width': 728,
+                        'params': {}
+                    };
+                </script>
+                <script type="text/javascript" src="//www.highperformanceformat.com/07574fd794fc323fba48d3bcbe056cba/invoke.js"></script>
             </div>
-            <a href="https://hackbit.com" target="_blank" rel="noopener noreferrer" class="banner-link" id="fallbackBanner" style="display:none;">
+            <a href="https://hackbit.com" target="_blank" rel="noopener noreferrer" class="banner-link" id="fallbackBanner">
                 <img src="ads.png" alt="Advertisement Banner" class="banner-img">
             </a>
         </div>
@@ -213,12 +221,23 @@
             </div>
 
             <div class="student-banner-ad">
-                <div class="student-banner-content">
-                    <h4 class="student-banner-heading">Special Announcement</h4>
-                    <p class="student-banner-text">Primary Course offering of CSE/ECSE Spring 2025 Semester.</p>
-                    <a href="https://www.facebook.com/share/p/1Bf7HSnZE9/?" class="student-banner-button">Learn More</a>
+                <div id="profileBannerAd1">
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': '07574fd794fc323fba48d3bcbe056cba',
+                            'format': 'iframe',
+                            'height': 90,
+                            'width': 728,
+                            'params': {}
+                        };
+                    </script>
+                    <script type="text/javascript" src="//www.highperformanceformat.com/07574fd794fc323fba48d3bcbe056cba/invoke.js"></script>
                 </div>
+                <a href="#" class="student-banner-link" id="fallbackProfileBanner1">
+                    <img src="student-ads.gif" alt="Semester Registration Banner" class="student-banner-image">
+                </a>
             </div>
+            
             <div class="payment-notes-section">
                 <h3 class="notes-header">Payment Notes</h3>
                 <div id="paymentNotesList" class="payment-notes-list">
