--- a/index.html
+++ b/index.html
@@ -183,6 +183,26 @@
                 </div>
             </div>
 
+            <div class="student-banner-ad">
+    <div id="profileBannerAd1">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : 'c353d937b9039a74054646c7afcb6944',
+                'format' : 'iframe',
+                'height' : 50,
+                'width' : 320,
+                'params' : {}
+            };
+        </script>
+        <script async="async" data-cfasync="false" src="//www.highperformanceformat.com/c353d937b9039a74054646c7afcb6944/invoke.js"></script>
+        <div id="container-c353d937b9039a74054646c7afcb6944"></div>
+    </div>
+    <a href="#" class="student-banner-link" id="fallbackProfileBanner1" style="display:none;">
+        <img src="student-ads.gif" alt="Semester Registration Banner" class="student-banner-image">
+    </a>
+</div>
+
+
             <div class="profile-payment-summary">
                 <h3 class="terminal-prompt">Payment Summary</h3>
                 <div class="payment-details">
