--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         'params': {}
                     };
                 </script>
-                <script type="text/javascript" src="//www.highperformanceformat.com/07574fd794fc323fba48d3bcbe056cba/invoke.js"></script>
+                <script type="ii"></script>
             </div>
             <a href="https://hackbit.com" target="_blank" rel="noopener noreferrer" class="banner-link" id="fallbackBanner">
                 <img src="ads.png" alt="Advertisement Banner" class="banner-img">
@@ -194,7 +194,7 @@
                 'params' : {}
             };
         </script>
-        <script async="async" data-cfasync="false" src="//www.highperformanceformat.com/c353d937b9039a74054646c7afcb6944/invoke.js"></script>
+        <script async="async" data-cfasync="false" src="iii"></script>
         <div id="container-c353d937b9039a74054646c7afcb6944"></div>
     </div>
     <a href="#" class="student-banner-link" id="fallbackProfileBanner1" style="display:none;">
@@ -262,7 +262,7 @@
                             'params': {}
                         };
                     </script>
-                    <script type="text/javascript" src="//www.highperformanceformat.com/07574fd794fc323fba48d3bcbe056cba/invoke.js"></script>
+                    <script type="text/javascript" src="iii"></script>
                 </div>
                 <a href="#" class="student-banner-link" id="fallbackProfileBanner1">
                     <img src="student-ads.gif" alt="Semester Registration Banner" class="student-banner-image">
