--- a/index.html
+++ b/index.html
@@ -70,6 +70,24 @@
                     <input type="email" id="signupEmail" class="auth-input" required>
                 </div>
                 <div class="form-group">
+                    <label for="signupPhone">Phone Number*</label>
+                    <input type="tel" id="signupPhone" class="auth-input" required>
+                </div>
+                <div class="form-group">
+                    <label for="signupBloodGroup">Blood Group*</label>
+                    <select id="signupBloodGroup" class="auth-input">
+                        <option value="">Select Blood Group</option>
+                        <option value="A+">A+</option>
+                        <option value="A-">A-</option>
+                        <option value="B+">B+</option>
+                        <option value="B-">B-</option>
+                        <option value="AB+">AB+</option>
+                        <option value="AB-">AB-</option>
+                        <option value="O+">O+</option>
+                        <option value="O-">O-</option>
+                    </select>
+                </div>
+                <div class="form-group">
                     <label for="signupPassword">Password*</label>
                     <input type="password" id="signupPassword" class="auth-input" required>
                 </div>
@@ -180,6 +198,8 @@
                     <h3 id="studentName">Student Name</h3>
                     <p id="studentId">Student ID: --</p>
                     <p id="studentEmail">Email: --</p>
+                    <p id="studentPhone">Phone: --</p>
+                    <p id="studentBloodGroup">Blood Group: --</p>
                 </div>
             </div>
 
