--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                     <input type="password" id="signupPassword" class="auth-input" required>
                 </div>
                 <div class="form-group">
-                    <label for="profilePicture">Profile Picture (Max 1MB)</label>
-                    <input type="file" id="profilePicture" class="auth-input file-input" accept="image/*">
+                    <label for="profilePicture">Profile Picture (Max 1MB)*</label>
+                    <input type="file" id="profilePicture" class="auth-input file-input" accept="image/*" required>
                 </div>
                 <button type="submit" class="auth-button">Sign Up</button>
                 <div class="auth-message" id="signupMessage"></div>
