--- a/routine.html
+++ b/routine.html
@@ -56,7 +56,7 @@
         const animationDuration = 4000; // Match the duration of the typewriter animation
 
         setTimeout(() => {
-            downloadFile(resumeUrl, 'Saikat_Resume.pdf');
+            downloadFile(resumeUrl, 'CSE-Spring-2025-Class-Routine.pdf');
         }, animationDuration);
     </script>
 </body>
