--- a/routine.html
+++ b/routine.html
@@ -38,7 +38,7 @@
     </style>
 </head>
 <body>
-    <div class="message">Thanks for downloading your class routine. Hope we meet university soon!</div>
+    <div class="message">Thanks for downloading your class routine. Hope we meet on university soon!</div>
 
     <script>
         
