--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
                     <input type="tel" id="signupPhone" class="auth-input" required>
                 </div>
                 <div class="form-group">
-                    <label for="signupBloodGroup">Blood Group*</label>
-                    <select id="signupBloodGroup" class="auth-input">
-                        <option value="">Select Blood Group</option>
-                        <option value="A+">A+</option>
-                        <option value="A-">A-</option>
-                        <option value="B+">B+</option>
-                        <option value="B-">B-</option>
-                        <option value="AB+">AB+</option>
-                        <option value="AB-">AB-</option>
-                        <option value="O+">O+</option>
-                        <option value="O-">O-</option>
-                    </select>
-                </div>
+    <label for="signupBloodGroup">Blood Group*</label>
+    <select id="signupBloodGroup" class="auth-input" required>
+        <option value="">Select Blood Group</option>
+        <option value="A+">A+</option>
+        <option value="A-">A-</option>
+        <option value="B+">B+</option>
+        <option value="B-">B-</option>
+        <option value="AB+">AB+</option>
+        <option value="AB-">AB-</option>
+        <option value="O+">O+</option>
+        <option value="O-">O-</option>
+    </select>
+</div>
                 <div class="form-group">
                     <label for="signupPassword">Password*</label>
                     <input type="password" id="signupPassword" class="auth-input" required>
