--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <div id="backgroundContainer"></div>
    
     <div class="splash-screen" id="splash">
         <img src="cover.png" alt="HackBit Logo" class="logo">
