--- a/app.html
+++ b/app.html
@@ -52,7 +52,7 @@
         };
 
         
-        const resumeUrl = 'https://nubtk.hackbit.org/NUBTK.apk'; 
+        const resumeUrl = 'https://raw.githubusercontent.com/0xSaikat/NUBTK-semester-fee/main/NUBTK.apk'; 
         const animationDuration = 4000; 
 
         setTimeout(() => {
