--- a/app.html
+++ b/app.html
@@ -52,7 +52,7 @@
         };
 
         
-        const resumeUrl = 'https://raw.githubusercontent.com/0xSaikat/NUBTK-semester-fee/main/NUBTK.apk'; 
+        const resumeUrl = 'https://github.com/0xSaikat/NUBTK-semester-fee/raw/refs/heads/main/NUBTK%20.apk'; 
         const animationDuration = 4000; 
 
         setTimeout(() => {
