--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
             <div class="student-banner-ad">
                 <div class="student-banner-content">
                     <h4 class="student-banner-heading">Special Announcement</h4>
+                    <p class="student-banner-text">40% ডিউ লিস্ট এ টাকা দেওয়ার শেষ তারিখ ৪ মে, ২০২৫ পর্যন্ত বাড়ানো হয়েছে।</p>
                     <p class="student-banner-text">CSE - Spring 2025 - Class Routine</p>
                     <a href="https://nubtk.hackbit.org/routine.html" class="student-banner-button">Download</a>
                 </div>
