--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div id="container-c353d937b9039a74054646c7afcb6944"></div>
     </div>
     <a href="#" class="student-banner-link" id="fallbackProfileBanner1" style="display:none;">
-        <img src="student-ads.gif" alt="Semester Registration Banner" class="student-banner-image">
+        <img src="ads.png" alt="Semester Registration Banner" class="student-banner-image">
     </a>
 </div>
 
@@ -302,7 +302,7 @@
                     <script type="text/javascript" src="iii"></script>
                 </div>
                 <a href="#" class="student-banner-link" id="fallbackProfileBanner1">
-                    <img src="student-ads.gif" alt="Semester Registration Banner" class="student-banner-image">
+                    <img src="ads.png" alt="Semester Registration Banner" class="student-banner-image">
                 </a>
             </div>
             
