--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </script>
                 <script type="ii"></script>
             </div>
-            <a href="https://hackbit.com" target="_blank" rel="noopener noreferrer" class="banner-link" id="fallbackBanner">
+            <a href="https://www.lavishcotton.com" target="_blank" rel="noopener noreferrer" class="banner-link" id="fallbackBanner">
                 <img src="ads.png" alt="Advertisement Banner" class="banner-img">
             </a>
         </div>
@@ -233,7 +233,7 @@
         <script async="async" data-cfasync="false" src="iii"></script>
         <div id="container-c353d937b9039a74054646c7afcb6944"></div>
     </div>
-    <a href="#" class="student-banner-link" id="fallbackProfileBanner1" style="display:none;">
+    <a href="https://www.lavishcotton.com" class="student-banner-link" id="fallbackProfileBanner1" style="display:none;">
         <img src="ads.png" alt="Semester Registration Banner" class="student-banner-image">
     </a>
 </div>
@@ -301,7 +301,7 @@
                     </script>
                     <script type="text/javascript" src="iii"></script>
                 </div>
-                <a href="#" class="student-banner-link" id="fallbackProfileBanner1">
+                <a href="https://www.lavishcotton.com" class="student-banner-link" id="fallbackProfileBanner1">
                     <img src="ads.png" alt="Semester Registration Banner" class="student-banner-image">
                 </a>
             </div>
